Success messages modified

--- a/copy-style-guide.html
+++ b/copy-style-guide.html
@@ -75,13 +75,12 @@
         <tr>
           <th rowspan="2">Success</th>
           <td>New item added</td>
-          <td class="copy">Well done! The blog post has been added.</td>
-          <td>A little diversity is welcome as long as the style is consistent. E.g. &lsquo;Well done!&rsquo;, &lsquo;Good job!&rsquo; or &lsquo;Great!&rsquo; to start a success message.</td>
+          <td class="copy">All done! The blog post has been added.</td>
+          <td rowspan="2">A little diversity is welcome as long as the style is consistent. E.g. &lsquo;There you go!&rsquo;, &lsquo;All wrapped up!&rsquo; or &lsquo;Great!&rsquo; to start a success message.</td>
         </tr>
         <tr>
           <td>Item updated</td>
           <td class="copy">OK, changes are saved.</td>
-          <td>&nbsp;</td>
         </tr>
         
         <tr>
