--- a/fr/copy-style-guide.html
+++ b/fr/copy-style-guide.html
@@ -75,13 +75,12 @@
         <tr>
           <th rowspan="2">Confirmation</th>
           <td>Nouvel item ajouté</td>
-          <td class="copy">Bravo&nbsp;! Le billet de blog a été ajouté.</td>
-          <td>Un peu de diversité ne fait pas de mal tant que le style reste cohérent. Ex&nbsp; &laquo;&nbsp;Bravo&nbsp;!&nbsp;&raquo;, &laquo;&nbsp;Bon boulot&nbsp;&raquo; ou &laquo;&nbsp;C'est tout bon&nbsp;!&nbsp;&raquo; pour commencer un message de confirmation.</td>
+          <td class="copy">Parfait&nbsp;! Le billet de blog a été ajouté.</td>
+          <td rowspan="2">Un peu de diversité ne fait pas de mal tant que le style reste cohérent. Ex&nbsp; &laquo;&nbsp;&Ccedil;a y est est&nbsp;&raquo;, &laquo;&nbsp;Et voilà&nbsp;!&nbsp;&raquo; ou &laquo;&nbsp;C'est tout bon&nbsp;!&nbsp;&raquo; pour commencer un message de confirmation.</td>
         </tr>
         <tr>
           <td>Item mis à jour</td>
           <td class="copy">C'est bon, les modifications ont été enregistrées.</td>
-          <td>&nbsp;</td>
         </tr>
         
         <tr>
