--- a/copy-style-guide.html
+++ b/copy-style-guide.html
@@ -92,7 +92,7 @@
         <tr>
           <td>System error</td>
           <td class="copy">Something went error. Please try again and contact your developer or Novius OS if the problem persists. We apologise for the inconvenience caused.</td>
-          <td>No &rsquo;Oops!&rsquo; or &rsquo;Sorry!&rsquo;. This is a serious, the user has probably lost time and data.</td>
+          <td>Don't &rsquo;Oops!&rsquo; the user. She/he might have lost time or data.</td>
         </tr>
         <tr>
           <td>Error prevention (warning)</td>
