Something went wrong, not error

--- a/copy-style-guide.html
+++ b/copy-style-guide.html
@@ -91,7 +91,7 @@
         </tr>
         <tr>
           <td>System error</td>
-          <td class="copy">Something went error. Please try again and contact your developer or Novius OS if the problem persists. We apologise for the inconvenience caused.</td>
+          <td class="copy">Something went wrong. Please try again and contact your developer or Novius OS if the problem persists. We apologise for the inconvenience caused.</td>
           <td>Don't &rsquo;Oops!&rsquo; the user. She/he might have lost time or data.</td>
         </tr>
         <tr>
