--- a/copy-style-guide.html
+++ b/copy-style-guide.html
@@ -49,6 +49,10 @@
         <li><strong>Knowledgeable</strong> but not haughty.</li>
       </ul>
       
+      <h2>English language</h2>
+      <p>Novius OS is written in <strong>British English</strong>. So could you please be kind enough to restrain from using the spelling &lsquo;Media Center&rsquo; instead of the more gentrified &lsquo;Media Centre&rsquo;?</p>
+      <p>For quotation marks, we follow <a href="http://oxforddictionaries.com/us/words/quotation-marks-american">the rule given by Oxford Dictionnaries</a>&mdash;single inverted commas e.g. &lsquo;Hello world&rsquo;.</p>
+      
       <h2>Copy examples</h2>
       <table>
         <tr>
