Style guide moved to RTD

--- a/glossary.html
+++ b/glossary.html
@@ -68,7 +68,7 @@
   </tr>-->
   <tr>
     <td>Applications manager</td>
-    <td>Gestionnaire des applications</td>
+    <td>Gestion des applications</td>
     <td>&nbsp;</td>
     <td>&nbsp;</td>
     <td>&nbsp;</td>
@@ -82,7 +82,7 @@
   </tr>
   <tr>
     <td>Permission</td>
-    <td>Droit</td>
+    <td>Droit d’accès</td>
     <td>Right, Access</td>
     <td>&nbsp;</td>
     <td>&nbsp;</td>
