--- a/fr/index.html
+++ b/fr/index.html
@@ -9,6 +9,6 @@
     <link href="../stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />  
   </head>
   <body id="home">
-    <p>Vous allez être redirigé(e) vers le <a href="http://github.com/novius-os/novius-os/wiki">wiki de documentation de Novius OS</a>...</p>
+    <p>Vous allez être redirigé(e) vers le <a href="http://docs-fr.novius-os.org">la documentation de Novius OS sur Read The Docs</a>...</p>
   </body>
 </html>
