--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />  
   </head>
   <body id="home">
-    <p>Redirecting to <a href="http://github.com/novius-os/novius-os/wiki">Novius OS documentation wiki</a>...</p>
+    <p>Redirecting to <a href="http://docs.novius-os.org">Novius OS documentation on Read The Docs</a>...</p>
   </body>
 </html>
